crates/polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_empty_modifications.snap
---
source: crates/polychem/src/polymers/polymer_database.rs
expression: modifications.unwrap()
---
{}
