crates/polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_massless_modification.snap
---
source: crates/polychem/src/polymers/polymer_database.rs
expression: modifications.unwrap()
---
{
  "Ac": ModificationDescription(
    name: "O-Acetylation",
    lost: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    gained: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    targets: [
      Target(
        group: "Hydroxyl",
        location: Some("6-Position"),
        residue: None,
      ),
    ],
  ),
}
